--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,12 @@
     <string name="app_name">SBU Meal Planner</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
-	<string name="title_activity_Login">Login</string>
-	<string name="action_logout">Logout</string>
+    <string name="title_activity_Login">Login</string>
+    <string name="action_logout">Logout</string>
+    <string name="title_activity_main_activity2">MainActivity2</string>
+    <string name="title_section1">Section 1</string>
+    <string name="title_section2">Section 2</string>
+    <string name="title_section3">Section 3</string>
+    <string name="title_activity_history">HistoryActivity</string>
+
 </resources>
